# autonomous-quadruped

./: README.md
src/autonomous_quadruped/: CMakeLists.txt  package.xml
src/autonomous_quadruped/launch/: autonomous_quadruped.launch
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp  controller_node.cpp
src/keyboard_control/: CMakeLists.txt  package.xml
src/keyboard_control/launch/: keyboard_control.launch
src/navigation/: package.xml
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner.yaml  local_costmap_params.yaml
src/navigation/launch/: move_base.launch
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: depthimage_to_laserscan.launch  occupancy_grid.launch  perception.launch  point_cloud.launch
src/quadruped_rviz/: CMakeLists.txt  package.xml
src/quadruped_rviz/rviz/: path_planning.rviz
src/simulation/launch/: simulation.launch
src/teleop_actuators_keyboard/: CMakeLists.txt  package.xml
src/teleop_actuators_keyboard/scripts/: teleop_actuators_keyboard.py
src/teleop_pkg/: CMakeLists.txt  package.xml
src/teleop_pkg/launch/: teleop.launch
src/teleop_pkg/src/: teleop_node.py  teleop_publisher_node.py  teleop_subscriber_node.cpp
