<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>

  <maintainer email="quan@todo.todo">quan</maintainer>


  <license>TUM</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  
  <export>

  </export>
</package>
